fix collapse button visibility

--- a/editor/src/app/components/library-page/library-page.component.scss
+++ b/editor/src/app/components/library-page/library-page.component.scss
@@ -48,6 +48,7 @@ main {
   position: fixed;
   bottom: 36px;
   left: 18px;
+  z-index: 1032;
 }
 
 .sidebar-icon {
